--- a/.gitignore
+++ b/.gitignore
@@ -7173,3 +7173,18 @@ build/CMakeFiles/3.21.3/CMakeSystem.cmake
 build/CMakeFiles/3.21.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
 build/CMakeFiles/3.21.3/CompilerIdCXX/CMakeCXXCompilerId.o
 ci_tools_bitcoinz_dex/vcpkg/
+build_3/CMakeCache.txt
+build_3/CMakeFiles/3.21.3/CMakeRCCompiler.cmake
+build_3/CMakeFiles/3.21.3/CMakeSystem.cmake
+build_3/CMakeFiles/3.21.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
+build_3/CMakeFiles/3.21.3/CompilerIdCXX/CMakeCXXCompilerId.o
+build_3/CMakeFiles/cmake.check_cache
+build_3/CMakeFiles/CMakeError.log
+build_3/CMakeFiles/CMakeOutput.log
+build_3/CMakeFiles/ShowIncludes/foo.h
+build_3/CMakeFiles/ShowIncludes/main.c
+build_3/vcpkg-manifest-install.log
+build/CMakeFiles/3.20.6/CMakeRCCompiler.cmake
+build/CMakeFiles/3.20.6/CMakeSystem.cmake
+build/CMakeFiles/3.20.6/CompilerIdCXX/CMakeCXXCompilerId.cpp
+build/CMakeFiles/3.20.6/CompilerIdCXX/CMakeCXXCompilerId.o
